Fix multipart memory leak on singleplayer world close, closes #1466